# Colonel-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  railway.toml
evaluation/: .env.example  .gitignore  EVAL.md  evaluate.py  evaluation_autoimprovements_rounds.mov  improve.py  improve_report_20260530T235824Z.json  improve_report_20260530T235824Z.md  pyproject.toml  query_claude.py  query_nemotron.py  scenarios.py  tactical_prompt.py
evaluation/prompt_versions/: instruction_v0.txt  instruction_v1_clean.txt
llm-prompting/: .env.example  README.md  parse_results.py  pyproject.toml  query_nemotron.py  tactical_prompt.py  tactical_results.sample.txt
server/: bot.py  pcc-deploy.toml  prompts.py  pyproject.toml  tools.py  transcript_logger.py
simulation/: app.py  engine.py  models.py  pyproject.toml  seed.py  state.py
simulation/static/: index.html
