[project]
name = "llm-prompting"
version = "0.1.0"
description = "Tactical situational-awareness prompt tests for the Nemotron LLM endpoint"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.2",
    "matplotlib>=3.10.9",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]
