[project]
name = "colonel-ai-voice"
version = "0.1.0"
description = "Colonel AI voice bot — battlefield intelligence via Pipecat"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[gradium,openai,runner,silero,webrtc,websocket]>=1.3.0",
    "pipecatcloud>=0.7.1",
    "aiohttp>=3.9.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]
